--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/bower.json
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/bower.json
@@ -12,6 +12,7 @@
     "bootstrap": "~3.2.0",
     "jquery-ui": "~1.11.0",
     "angular-wakanda": "~0.3.1",
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "ngstorage": "~0.3.0"
   }
 }
