--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/bower.json
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/bower.json
@@ -13,6 +13,7 @@
     "jquery-ui": "~1.11.0",
     "angular-wakanda": "~0.3.1",
     "angular-bootstrap": "~0.12.1",
-    "ngstorage": "~0.3.0"
+    "ngstorage": "~0.3.0",
+    "angular-xeditable": "~0.1.8"
   }
 }
